# PyrSync

./: .buildinfo  .gitignore  README.md  api.html  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/: index.md
.github/workflows/: docs.yml  publish.yml
_sources/: examples.rst.txt  quickstart.rst.txt
_static/: custom.css  switcher.json
pyrsync/: source.py
pysync/: __init__.py  rsync_plus.py
scripts/: install_cli.sh  preview_docs.py
sphinx/: api.rst  conf.py  index.rst  installation.rst
sphinx/_static/: custom.css
