[tool.poetry]
name = "pysync"
version = "0.1.0"
description = "Enhanced Python wrapper for easier (r)-syncing"
authors = ["Colin Conwell"]
readme = "README.md"
packages = [{include = "pysync"}]
license = "MIT"
repository = "https://github.com/colinconwell/PySync"
documentation = "https://github.com/colinconwell/PySync#readme"
keywords = ["rsync", "sync", "git", "ssh", "backup"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
pysync = "pysync.rsync:cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 