[tool.poetry]
name = "pyrsync"
version = "0.1.0"
description = "Enhanced Python wrapper for easier (r)-syncing"
authors = ["Colin Conwell"]
readme = "README.md"
packages = [{include = "pyrsync"}]
license = "MIT"
repository = "https://github.com/colinconwell/PyrSync"
documentation = "https://colinconwell.github.io/PyrSync"
keywords = ["rsync", "sync", "git", "ssh", "backup"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
pydata-sphinx-theme = "^0.14.0"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2024.2.4"

[tool.poetry.scripts]
pyrsync = "pyrsync.source:cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 